# hemeXtract

./: .gitignore  CMakeLists.txt  Compare.h  HemeLBExtractionFile.h  HemeLBExtractionFileTypes.h  Makefile  Mapping.h  README  Site.h  Snapshot.h  Vector3.h  hemeXtract  hemeXtract.cc  make_cross_section_plot.py
.github/workflows/: build.yml
anal/: HemeResultsManager.py  OLD_make_cross_section_plot_OLD.py  compare_WSS.py  make_all_cross_plots.py  make_all_planes_error_plot.py  make_correl_matrix.py  make_correl_plot.py  make_cross_section_plot.py  make_max_vel_diff_plot.py  make_max_vel_plot.py  make_single_max_vel_plot.py  paraview_WSS.py
cmake/: FindTIRPC.cmake  Findargp.cmake
include/: Compare.h  HemeLBExtractionFile.h  HemeLBExtractionFileTypes.h  Mapping.h  Site.h  Snapshot.h  Vector3.h
src/: Compare.cc  HemeLBExtractionFile.cc  Mapping.cc  Snapshot.cc  hemeXtract.cc
